# LightweightRAG

./: .gitignore  LICENSE  README.md  pyproject.toml
cbfk/: __init__.py  bm25_retriever.py  evaluate.py  experiment_config.py  ground_truth.py  hybrid_retriever.py  index_manager.py  llm_prompter.py  models.py  param_explorer.py  query_rewriter.py  sweep_agent.py  sweep_config.py
cbfk/log/: __init__.py  html_reports.py  log_config.py  wandb_logger.py
cbfk/log/templates/: dark_mode.css  experiment_run_report.jinja2  index_report.jinja2  question_report.jinja2
insights/: chunking_eval.py  db_plot.py  etl_db.py  hybrid_retrieval_eval.py  llm_eval.py  llm_judge_benchmark.py  plot_utils.py  post_sweep_evaluation.py  print_largest_chunks.py  rmse_vs_time_scatterplot.py  sweep_dump.py  t-sne-index-store.py
